...
            android:src="@mipmap/ic_launcher_round"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:contentDescription="@string/workclout_logo" />

        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_below="@+id/imgView_logo"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


...
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/linlay1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/tv_login"
                android:orientation="vertical">

...
                        android:text="Username"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:textSize="20sp"/>

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:fontFamily="sans-serif-light"
...
                            android:text="Password"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            android:textSize="20sp"/>

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="5dp"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:inputType="textWebPassword"
...
                    android:fontFamily="sans-serif-medium"
                    android:text="Coach"
                    android:textColor="@color/white"
                    android:theme="@style/checkBoxStyle" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linlay1"
                    android:layout_marginTop="50dp"
                    android:layout_gravity="center_horizontal"
                    android:text="Login Now"
                    android:textAllCaps="false"
                    android:background="@drawable/btn_bg"
                    android:textColor="@color/white"
                    android:paddingLeft="70dp"
                    android:paddingRight="70dp"
                    android:textSize="16sp"
...
